package com.itmo.mrdvd.object;

public interface HavingId {
  public Long getId();

  public void setId(Long id);
}
