package com.itmo.mrdvd.object;

public enum TicketField {
  ID,
  NAME,
  CREATION_DATE,
  PRICE,
  TYPE,
  EVENT
}
